<?xml version="1.0"?>
<package format="2">
  <name>command_interface</name>
  <version>0.0.0</version>
  <description>The command_interface package</description>

  <maintainer email="aarnal@todo.todo">aarnal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
